# feedparser-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  codecov.yml  deny.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: code-reviewer.agent.md  rust-developer.agent.md
.github/instructions/: node-bindings.instructions.md  parser.instructions.md  python-bindings.instructions.md  tests.instructions.md  types.instructions.md
.github/workflows/: ci.yml  dependabot-automerge.yml  labeler.yml  release-crates.yml  release-github.yml  release-npm.yml  release-pypi.yml  release.yml
benchmarks/: compare.sh  generate_fixtures.py
benchmarks/fixtures/: large.xml  medium.xml  small.xml
benchmarks/python/: bench_feedparser.py
crates/feedparser-rs-core/: Cargo.toml  README.md
crates/feedparser-rs-core/benches/: parsing.rs
crates/feedparser-rs-core/src/: error.rs  lib.rs  limits.rs  options.rs
crates/feedparser-rs-core/src/compat/: mod.rs
crates/feedparser-rs-core/src/http/: client.rs  mod.rs  validation.rs
crates/feedparser-rs-core/src/namespace/: cc.rs  content.rs  dublin_core.rs  georss.rs  media_rss.rs  mod.rs
crates/feedparser-rs-core/src/parser/: atom.rs  common.rs  detect.rs  json.rs  mod.rs  namespace_detection.rs  rss.rs  rss10.rs
crates/feedparser-rs-core/src/types/: common.rs  entry.rs  feed.rs  generics.rs  mod.rs  podcast.rs  version.rs
crates/feedparser-rs-core/src/util/: base_url.rs  date.rs  encoding.rs  mod.rs  sanitize.rs  text.rs
crates/feedparser-rs-core/tests/: http_integration.rs  integration_tests.rs  namespace_edge_cases.rs  namespace_integration.rs  test_podcast_namespace.rs
crates/feedparser-rs-node/: .npmignore  .npmrc  Cargo.toml  README.md  biome.json  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
crates/feedparser-rs-node/__test__/: index.spec.mjs  phase3-fields.spec.mjs  syndication.spec.mjs
crates/feedparser-rs-node/src/: lib.rs
crates/feedparser-rs-py/: Cargo.toml  README.md  pyproject.toml
crates/feedparser-rs-py/src/: error.rs  lib.rs  limits.rs
crates/feedparser-rs-py/src/types/: common.rs  datetime.rs  entry.rs  feed_meta.rs  geo.rs  media.rs  mod.rs  parsed_feed.rs  podcast.rs  syndication.rs
crates/feedparser-rs-py/tests/: test_basic.py  test_bindings.py  test_guid_entities.py
tests/fixtures/atom/: basic.xml  with-content.xml
tests/fixtures/json/: basic-1.0.json  basic-1.1.json
tests/fixtures/malformed/: invalid-dates.xml  missing-closing-tag.xml
tests/fixtures/podcast/: itunes-basic.xml
tests/fixtures/rss/: basic.xml  with-categories.xml  with-enclosures.xml
