[package]
name = "feedparser-rs-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "High-performance RSS/Atom/JSON Feed parser"
readme = "README.md"
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
quick-xml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
ammonia = { workspace = true }
html-escape = { workspace = true }
encoding_rs = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parsing"
harness = false

[lints]
workspace = true
